force-app/main/default/objects/Designation__c/fields/Basic_Salary__c.field-meta.xml
<CustomField>
    <fullName>Basic_Salary__c</fullName>
    <label>Basic Salary</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>