force-app/main/default/objects/Designation__c/fields/Overtime_Holiday_Pay__c.field-meta.xml
<CustomField>
    <fullName>Overtime_Holiday_Pay__c</fullName>
    <label>Overtime Holiday Pay (%)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>