force-app/main/default/objects/Designation__c/fields/Required_Work_Hours__c.field-meta.xml
<CustomField>
    <fullName>Required_Work_Hours__c</fullName>
    <label>Required Work Hours</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>