force-app/main/default/objects/Designation__c/fields/Shift_Schedule_End__c.field-meta.xml
<CustomField>
    <fullName>Shift_Schedule_End__c</fullName>
    <label>Shift Schedule End</label>
    <type>Time</type>
</CustomField>