force-app/main/default/objects/Designation__c/fields/Shift_Schedule_Start__c.field-meta.xml
<CustomField>
    <fullName>Shift_Schedule_Start__c</fullName>
    <label>Shift Schedule Start</label>
    <type>Time</type>
</CustomField>